edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/security/v1/authentication.proto";
import "wayplatform/connect/tachograph/dd/v1/date.proto";
import "wayplatform/connect/tachograph/dd/v1/driver_identification.proto";
import "wayplatform/connect/tachograph/dd/v1/ia5_string_value.proto";
import "wayplatform/connect/tachograph/dd/v1/nation_numeric.proto";
import "wayplatform/connect/tachograph/dd/v1/string_value.proto";

// Represents the identification data for a driver card, combining card identification
// with driver card holder identification.
//
// This message is specific to driver cards and has a fixed binary size of 143 bytes.
// It combines the CardIdentification structure (65 bytes, Data Dictionary Section 2.24)
// with the DriverCardHolderIdentification structure (78 bytes, Data Dictionary Section 2.62).
//
// The file structure is defined in Appendix 2, Section 4.2.1 (TCS_148):
//
//     EF Identification
//     ├─CardIdentification
//     └─DriverCardHolderIdentification
//     Signature
//
// CardIdentification ASN.1 Specification (Data Dictionary Section 2.24):
//
//     CardIdentification ::= SEQUENCE {
//         cardIssuingMemberState NationNumeric,
//         cardNumber CardNumber,
//         cardIssuingAuthorityName Name,
//         cardIssueDate TimeReal,
//         cardValidityBegin TimeReal,
//         cardExpiryDate TimeReal
//     }
//
// DriverCardHolderIdentification ASN.1 Specification (Data Dictionary Section 2.62):
//
//     DriverCardHolderIdentification ::= SEQUENCE {
//         cardHolderName HolderName,
//         cardHolderBirthDate Datef,
//         cardHolderPreferredLanguage Language
//     }
//
// Binary Layout (143 bytes total):
//   - CardIdentification: 65 bytes
//     - cardIssuingMemberState: 1 byte (NationNumeric)
//     - cardNumber: 16 bytes (DriverIdentification for driver cards)
//     - cardIssuingAuthorityName: 36 bytes (Name with code page + data)
//     - cardIssueDate: 4 bytes (TimeReal)
//     - cardValidityBegin: 4 bytes (TimeReal)
//     - cardExpiryDate: 4 bytes (TimeReal)
//   - DriverCardHolderIdentification: 78 bytes
//     - cardHolderSurname: 36 bytes (Name with code page + data)
//     - cardHolderFirstNames: 36 bytes (Name with code page + data)
//     - cardHolderBirthDate: 4 bytes (Datef)
//     - cardHolderPreferredLanguage: 2 bytes (Language)
message DriverCardIdentification {
  // The issuing member state of the card.
  //
  // See Data Dictionary, Section 2.24, `cardIssuingMemberState`.
  // ASN.1 Specification: NationNumeric ::= INTEGER (0..255)
  wayplatform.connect.tachograph.dd.v1.NationNumeric card_issuing_member_state = 1;

  // The driver identification number for this driver card.
  //
  // See Data Dictionary, Section 2.26, `CardNumber` (driver card variant).
  // ASN.1 Specification: driverIdentification SEQUENCE {
  //     driverIdentificationNumber IA5String(SIZE(14))
  // }
  // Binary size: 14 bytes (IA5String)
  wayplatform.connect.tachograph.dd.v1.DriverIdentification driver_identification = 2;

  // The name of the authority that issued the card.
  //
  // See Data Dictionary, Section 2.24, `cardIssuingAuthorityName`.
  // ASN.1 Specification: Name ::= SEQUENCE { codePage INTEGER(0..255), name OCTET STRING (SIZE(35)) }
  // Binary size: 36 bytes (1 byte code page + 35 bytes string data)
  wayplatform.connect.tachograph.dd.v1.StringValue card_issuing_authority_name = 3;

  // The date the card was issued.
  //
  // See Data Dictionary, Section 2.24, `cardIssueDate`.
  // ASN.1 Specification: TimeReal ::= INTEGER (0..2^32-1)
  // Binary size: 4 bytes (big-endian unsigned 32-bit integer)
  google.protobuf.Timestamp card_issue_date = 4;

  // The date from which the card is valid.
  //
  // See Data Dictionary, Section 2.24, `cardValidityBegin`.
  // ASN.1 Specification: TimeReal ::= INTEGER (0..2^32-1)
  // Binary size: 4 bytes (big-endian unsigned 32-bit integer)
  google.protobuf.Timestamp card_validity_begin = 5;

  // The date on which the card expires.
  //
  // See Data Dictionary, Section 2.24, `cardExpiryDate`.
  // ASN.1 Specification: TimeReal ::= INTEGER (0..2^32-1)
  // Binary size: 4 bytes (big-endian unsigned 32-bit integer)
  google.protobuf.Timestamp card_expiry_date = 6;

  // The surname of the card holder.
  //
  // Corresponds to `holderSurname` within `HolderName` (Data Dictionary Section 2.83).
  // ASN.1 Specification: Name ::= SEQUENCE { codePage INTEGER(0..255), name OCTET STRING (SIZE(35)) }
  // Binary size: 36 bytes (1 byte code page + 35 bytes string data)
  wayplatform.connect.tachograph.dd.v1.StringValue card_holder_surname = 7;

  // The first name(s) of the card holder.
  //
  // Corresponds to `holderFirstNames` within `HolderName` (Data Dictionary Section 2.83).
  // ASN.1 Specification: Name ::= SEQUENCE { codePage INTEGER(0..255), name OCTET STRING (SIZE(35)) }
  // Binary size: 36 bytes (1 byte code page + 35 bytes string data)
  wayplatform.connect.tachograph.dd.v1.StringValue card_holder_first_names = 8;

  // The birth date of the card holder.
  //
  // See Data Dictionary, Section 2.62, `cardHolderBirthDate`.
  // ASN.1 Specification: Datef ::= OCTET STRING (SIZE(4))
  // Binary size: 4 bytes (BCD-encoded yyyymmdd)
  wayplatform.connect.tachograph.dd.v1.Date card_holder_birth_date = 9;

  // The preferred language of the card holder.
  //
  // See Data Dictionary, Section 2.62, `cardHolderPreferredLanguage`.
  // ASN.1 Specification: Language ::= IA5String (SIZE(2))
  // Binary size: 2 bytes (IA5String)
  wayplatform.connect.tachograph.dd.v1.Ia5StringValue card_holder_preferred_language = 10;

  // Signature data from the following file block, if tagged as a signature for
  // this EF according to the card file format specification (Appendix 2).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  //
  // ASN.1 Definition (Gen1):
  //
  //     Signature ::= OCTET STRING (SIZE(128))
  //
  // ASN.1 Definition (Gen2):
  //
  //     Signature ::= OCTET STRING (variable size, depends on elliptic curve)
  //
  // Gen2 uses ECDSA signatures with variable lengths based on the curve:
  // - 256-bit curves: ~64 bytes
  // - 384-bit curves: ~96 bytes
  // - 512/521-bit curves: ~128-132 bytes
  bytes signature = 99;

  // Result of cryptographic signature authentication for this Elementary File.
  // Present when signature verification has been performed.
  tachograph.security.v1.Authentication authentication = 100;
}

